# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shader_reader.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
shaders/: fragment.fs  vertex.vs
